changed jade files so that they put the visbol design in a div with class design-container. Also added css (or less) in synbiohub.less to make the design scroll on overflow. This fixes the tooltip bug (tooltip kept appearing in the wrong position if the design was bigger than the window length). It also ensures that the dropdown for each button above does not go under the design div.

--- a/public/styles/site/synbiohub.less
+++ b/public/styles/site/synbiohub.less
@@ -656,8 +656,9 @@ input:-webkit-autofill, .sbol-login-text, .change_password input {
     color: #7F8C8D;
 }
 
-.row {
+.design-container {
     overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 .search-results-area {
